<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.tootertutor</groupId>
    <artifactId>ethyrial</artifactId>
    <version>2.88.4</version>
    <name>ethyrial</name>
    <packaging>jar</packaging>

    <properties>
        <java.version>21</java.version>
        <paper.version>1.21.1-R0.1-SNAPSHOT</paper.version>
        <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
        <maven.shade.plugin.version>3.6.0</maven.shade.plugin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>jitpack</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>codemc-releases</id>
            <url>https://repo.codemc.io/repository/maven-releases/</url>
        </repository>
        <repository>
            <id>codemc-snapshots</id>
            <url>https://repo.codemc.io/repository/maven-snapshots/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Paper API -->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>${paper.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.45.1.0</version>
        </dependency>
        <dependency>
            <groupId>com.github.retrooper</groupId>
            <artifactId>packetevents-spigot</artifactId>
            <version>2.8.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.wesjd</groupId>
            <artifactId>anvilgui</artifactId>
            <version>1.10.8-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>io.github.juliarn</groupId>
            <artifactId>npc-lib-bukkit</artifactId>
            <version>3.0.0-beta13</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}-${project.version}</finalName>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <plugins>
            <!-- Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <!-- Resource Filtering -->
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <relocations>
                                <!-- <relocation>
                                    <pattern>net.kyori</pattern>
                                    <shadedPattern>io.github.tootertutor.shaded.kyori</shadedPattern>
                                </relocation> -->
                                <relocation>
                                    <pattern>com.zaxxer.hikari</pattern>
                                    <shadedPattern>io.github.tootertutor.shaded.hikari</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>net.wesjd.anvilgui</pattern>
                                    <shadedPattern>io.github.tootertutor.shaded.anvilgui</shadedPattern>
                                </relocation>
                                <!-- <relocation>
                                    <pattern>com.github.juliarn.npclib</pattern>
                                    <shadedPattern>io.github.tootertutor.shaded.npclib</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>io.papermc.lib</pattern>
                                    <shadedPattern>io.github.tootertutor.shaded.paperlib</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>io.leangen.geantyref</pattern>
                                    <shadedPattern>io.github.tootertutor.shaded.geantyref</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>io.github.retrooper</pattern>
                                    <shadedPattern>io.github.tootertutor.shaded.retrooper</shadedPattern>
                                </relocation> -->
                            </relocations>
                            <minimizeJar>true</minimizeJar> <!-- Optional: smaller file -->
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludeDefaults>false</excludeDefaults>
                                    <includes>
                                        <include>net/wesjd/anvilgui/**</include>
                                    </includes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>
</project>